--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,12 +3,51 @@
     margin: 0;
     padding: 0;
 }
+.container {  display: grid;
+    grid-template-columns: 0px 1fr 0px;
+    grid-template-rows: 50px 1fr 1fr 1fr 1fr;
+    gap: 18px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". menuvertical ."
+      ". imgprincipal ."
+      ". ofertas ."
+      ". nuevoproducto ."
+      ". metodospago .";
+  }
+  
+  .menuvertical { grid-area: menuvertical; }
+  
+  .ofertas {  display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: ofertas;
+  }
+  
+  .nuevoproducto {  display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: nuevoproducto;
+  }
+  
+  .metodospago {  display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: metodospago;
+  }
+  
+  .imgprincipal { grid-area: imgprincipal; }
+  
  .menu-bar{
     display: none;
 }
 nav {
 
-    background: #f93800;
+    background: rgb(117,191,255);
     width: 100%;
 }
 ul {
@@ -18,6 +57,9 @@ ul {
 li {
     display: inline-block;
     position: relative;
+}
+.main-content{
+    width: 100%;
 }
 nav ul li:hover {
     background: #283350;
@@ -55,4 +97,31 @@ nav ul li .children li a {
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+}
+ .search input[type=text]{
+    width:300px;
+    height:25px;
+    border-radius:25px;
+    border: none;
+
+}  
+.search{
+    float:left;
+    margin:7px;
+
+} 
+.search button{
+    background-color: #0074D9;
+    color: #f2f2f2;
+    float: right;
+    padding: 5px 10px;
+    margin-right: 16px;
+    font-size: 12px;
+    border: none;
+    cursor: pointer;
+} 
+.logo{
+    float: left;
+    width: 3%;
+    margin-right: 2%;
 }
