--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,6 +4,9 @@
 }
 body {
     font-family:'Times New Roman', Times, serif;
+    background-image: url('../img/apparel-ge105b6cef_1920.jpg');
+    background-size: cover;
+
 }
 .container {
     background-image: url('../img/ea884f2711b7761fcc0b5a35d1b99697.jpg');
@@ -13,15 +16,15 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 .login-box {
-    background-image: linear-gradient(rgb(19,217,189),rgb(137,121,202),rgb(233,42,206));
-/*     background-image: linear-gradient(rgb(73, 250, 226),rgb(80, 180, 167),rgb(30, 145, 129)); */
     width: 350px;
     display: flex;
     justify-content: center;
     position: relative;
     border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.336);
 }
 .login-box-user {
     background-image: url('../img/1159740.png');
@@ -31,7 +34,7 @@ body {
     opacity: 0.8;
     position: absolute;
     top: -115px;
-    color: blue;
+    color: rgb(250, 250, 250);
 } 
 .login-box-body {
     margin-top: 30px;
@@ -39,17 +42,17 @@ body {
 .login-box-body h3 {
     font-weight: bold;
     font-size: 1.6em;
-    color: white;
+    color: black;
     text-align: center;
     margin: 20px 0;
 }
 .form-group {
-    border-bottom: solid 3px white;
+    border-bottom: solid 3px black;
     color:transparent;
     font-size: 1.3em;
     margin: 1.5em 0;
     background: transparent;
-    color: white;
+    color: black;
  } 
 .form-group input {
     background: none;
@@ -60,7 +63,7 @@ body {
  } 
 .login-box-body p {
   margin: 1em 0;
-    color: white;
+    color: black;
     font-size: 1.1em;
     font-weight: bold;
 } 
@@ -68,22 +71,25 @@ body {
     width: 100%;
     padding: 0.8em 0.5em;
     font-size: 1em;
-    color: white;
-    background-color: rgba(0,0,0,0.8);
+    color: black;
+    background-color: rgb(0, 0, 0);
     border: none;
     border-radius: 10px;
     margin: 1em 0;
     cursor: pointer;
 }
 .login-box-body button:hover{
- color: lime;
+ color: rgb(255, 255, 255);
 }
 .forgot-password {
-    color: white;
+    color: black;
 }
 .forgot-password:hover {
     color: lime;
 }
 a{
     text-decoration: none;
+}
+.button{
+    color: white;
 }
