--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -6,25 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="fonts/style.css">
+    <link rel="stylesheet" href="icons/all.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html"><i class="fas fa-home"></i>inicio</a></li>
-            <li class="submenu"><a href="#"><i class="fa fa-shopping-basket"></i> producto<i class="icon-chevron-small-down"></i></a>
-                <ul class="children">
-                    <li><a href="#">producto hogar</a></li>
-                    <li><a href="#">productos oficina</a></li>
-                    <li><a href="#">productos para viaje</a></li>
+    <div class="container">
+        <div class="menuvertical">
+            <nav>
+                <ul>
+                    <img class="logo" src="/img/logo2.png" alt="logo">
                 </ul>
-            </li>
-            <li><a href="*"><i class="fas fa-cogs"></i>proyecto</a></li>
-            <li><a href="*"><i class="fab fa-medapps"></i>nuestra misión</a></li>  
-            <li><a href="*"><i class="fas fa-phone"></i>contactenos</a></li>
-        </ul>
-    </nav>
-    <div>
-        <img class="img-principal" src="/img/zapatos de vestir.jpg" alt="">
-    </div>
+                <ul class="search">
+                    <input type="text" name="search" placeholder="Buscar">
+                    <button> <i class="fa fa-search" style="font-size: 18px;"></i> </button>
+                </ul>
+                <ul>
+                    <li><a href="homePage.ejs"><i class="fas fa-home"></i>inicio</a></li>
+                    <li class="submenu"><a href="tiendas.ejs"><i class="fa fa-shopping-basket"></i>Tiendas<i class="icon-chevron-small-down"></i></a>
+                        <ul class="children">
+                            <li><a href="#">Galileo</a></li>
+                            <li><a href="#">Jose saenz</a></li>
+                            <li><a href="#">Sara´Shoes</a></li>
+                        </ul>
+                        <li class="submenu"><a href="productos.ejs"><i class="fa fa-shopping-basket"></i>productos<i class="icon-chevron-small-down"></i></a>
+                            <ul class="children">
+                                <li><a href="#">zandalias</a></li>
+                                <li><a href="#">zapato clasico</a></li>
+                                <li><a href="#">zapato deportivo</a></li>
+                            </ul>
+                    </li>
+                    <li><a href="*"><i class="fas fa-cogs"></i>Promociones</a></li>
+                    <li><a href="*"><i class="fab fa-medapps"></i>Quienes Somos</a></li>  
+                    <li><a href="*"><i class="fas fa-phone"></i>Contactenos</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="imgprincipal">
+            <img class="img-principal" src="/img/materiales para zapatos.jpg" alt="imagen-principal">
+        </div>
+        <div class="ofertas">
+
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a><p>esta en promo</p></div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a>esta en promo</div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a>esta en promo</div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt="">esta en prom</a></div>
+            
+        </div>
+        <div class="nuevoproducto">
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a><p>esta en promo</p></div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a>esta en promo</div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a>esta en promo</div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt="">esta en prom</a></div>
+        </div>
+        <div class="metodospago">
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a><p>esta en promo</p></div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a>esta en promo</div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt=""></a>esta en promo</div>
+            <div class="jum"><a href=""><img src="/img/zapato1.jpg" alt="">esta en prom</a></div>
+        </div>
+      </div>
+    
+
+
+
+
 </body>
 </html>
