--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,22 +3,30 @@
     margin: 0;
     padding: 0;
 }
-.container {  display: grid;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.container {  
+    display: grid;
     grid-template-columns: 0px 1fr 0px;
-    grid-template-rows: 50px 1fr 1fr 1fr 1fr;
-    gap: 18px 0px;
+    grid-template-rows: 50px 1fr 0.1fr 0.1fr 0.1fr 0.1fr;
+    gap: 2% 0px;
     grid-auto-flow: row;
     grid-template-areas:
       ". menuvertical ."
       ". imgprincipal ."
       ". ofertas ."
       ". nuevoproducto ."
-      ". metodospago .";
+      ". metodospago ."
+      ". footer .";
   }
   
-  .menuvertical { grid-area: menuvertical; }
+  .menuvertical { 
+      grid-area: menuvertical; 
+    }
   
-  .ofertas {  display: grid;
+  .ofertas {  
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
     gap: 0px 0px;
@@ -40,13 +48,24 @@
     grid-area: metodospago;
   }
   
-  .imgprincipal { grid-area: imgprincipal; }
+  .imgprincipal { 
+      grid-area: imgprincipal; 
+      width: 100%;
+      height: 30%;
+    }
+      .footer {
+           grid-area: footer;
+        border-top: 1px solid white;
+        margin-top: 40px;
+        padding-top: 40px;
+        display: inline;
+        color: rgb(0, 0, 0);
+    }
   
  .menu-bar{
     display: none;
 }
 nav {
-
     background: rgb(117,191,255);
     width: 100%;
 }
@@ -61,10 +80,10 @@ li {
 .main-content{
     width: 100%;
 }
-nav ul li:hover {
+ li:hover {
     background: #283350;
 }
-nav ul li a {
+a {
     display: block;
     color: white;
     font-size: 1.3em;
@@ -77,8 +96,7 @@ nav ul li a {
     background: #0084ff;
     text-align: left;
 }
-
-nav ul li:hover .children {
+li:hover .children {
     display: block;
     width: 130%;
     text-align: left;
@@ -99,21 +117,24 @@ nav ul li .children li a {
     background-repeat: no-repeat;
 }
  .search input[type=text]{
-    width:300px;
-    height:25px;
-    border-radius:25px;
-    border: none;
+    position: relative;
+    margin-bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    padding: 10px;
 
 }  
 .search{
     float:left;
     margin:7px;
+    width: 30%;
 
 } 
 .search button{
     background-color: #0074D9;
     color: #f2f2f2;
-    float: right;
+
     padding: 5px 10px;
     margin-right: 16px;
     font-size: 12px;
@@ -124,4 +145,33 @@ nav ul li .children li a {
     float: left;
     width: 3%;
     margin-right: 2%;
+}.jum{
+    text-align: center;
+    box-shadow: 0 25px 98px 0 rgba(255, 255, 255, 0.288);
+    background: #ffffff3a;
+    border-left: blue 1px solid;
+    border-radius: 10px;
+    margin: 0 20px;
+}
+.jum p,
+.jum h4 {
+    margin-bottom: 5px;
+}
+.jum img{
+    width: 300px;
+    height: 300px;
+}
+.encabezado img{
+    border-radius: 10px;
+    width: 100%;
+}
+.met img{
+    width: 200px;
+}
+.menu{
+    display: inline;
+}
+.icon{
+    float: left;
+    width: 50px;
 }
