--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,26 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/fonts/style.css">
+    <link rel="stylesheet" href="/icons/all.css">
 </head>
 <body>
     <div class="container">
-        <div class="login-box">
-            <div class="login-box-user"></div>
-                <div class="login-box-body">
-                    <h3>Iniciar Sesión</h3>
-                    <div class="form-group">
-                        <label class="icon-user"></label>
-                        <input placeholder="usuario" type="text" name=""/>
-                    </div>
-                    <div class="form-group">
-                        <label class="icon-lock"></label>
-                        <input placeholder="contraseña" type="password" name="" />
-                    </div>
-                    <p><a href="recuperarContrasena.ejs" class="forgot-password">¡Olvidaste tu contraseña!</a></p>
-                    <button type="button"><a href="homePage.ejs"> Iniciar Sesión</a></button>
-                </div>
+        <div class="menuvertical">
+            <nav>
+                <ul>
+                    <img class="logo" src="/img/logo2.png" alt="logo">
+                </ul>
+                <ul class="search">
+                    <input type="text" name="search" placeholder="Que te gustaría comprar ">
+                </ul>
+                <ul>
+                    <li><a href="index.ejs"><i class="fas fa-home"></i>inicio</a></li>
+                    <li class="submenu"><a href="tiendas.ejs"><i class="fa fa-shopping-basket"></i>Tiendas<i class="icon-chevron-small-down"></i></a>
+                        <ul class="children">
+                            <li><a href="#">Galileo</a></li>
+                            <li><a href="#">Jose saenz</a></li>
+                            <li><a href="#">Sara´Shoes</a></li>
+                        </ul>
+                        <li class="submenu"><a href="productos.ejs"><i class="fa fa-shopping-basket"></i>productos<i class="icon-chevron-small-down"></i></a>
+                            <ul class="children">
+                                <li><a href="#">zandalias</a></li>
+                                <li><a href="#">zapato clasico</a></li>
+                                <li><a href="#">zapato deportivo</a></li>
+                            </ul>
+                    </li>
+                    <li><a href="*"><i class="fas fa-cogs"></i>Promociones</a></li>
+                    <li><a href="iniciar.ejs">Iniciar Sesión</a></li>
+                    <li><a href="registrar.ejs">Registrarse</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
+        <div class="imgprincipal">
+            <img class="img-principal" src="/img/font2.jpg" alt="imagen-principal">
+        </div>
+        
+        <div class="ofertas">
+            <div class="encabezado">
+                <img src="/img/oferta.png" alt="">
+            </div>
+            <div class="jum"><a href=""><img src="/img/21525691_2.png" alt=""></a><br>
+                <h4>SARA'SHOES</h4>
+                <p>Tenis Nike Hombre Moda Court Legacy</p>
+                <p>$ 379.950</p>
+            </div>
+            <div class="jum"><a href=""><img src="/img/31.jpg" alt=""></a><br>
+                <h4>GALILEO</h4>
+                <p>Botas Brahma café om2676caf</p>
+                <p>$ 399.900</p>
+            </div>            
+            <div class="jum"><a href=""><img src="/img/11.jpg" alt=""></a><br>
+                <h4>SARA'SHOES</h4>
+                <p>Tenis Veja Hombre Moda V-15</p>
+                <p>$ 869.990</p>
+            </div>
+        </div>
+        <div class="nuevoproducto">
+            <div class="encabezado">
+                <img src="/img/nuevo.png" alt="">
+            </div>
+            <div class="jum"><a href=""><img src="/img/22.jpg" alt=""></a><br>
+                <h4>JOSE SAENZ</h4>
+                <p>Tenis Puma Hombre Moda Shuffle</p>
+                <p>$ 229.990</p>
+            </div>
+            <div class="jum"><a href=""><img src="/img/31.jpg" alt=""></a><br>
+                <h4>GALILEO</h4>
+                <p>Tenis Adidas Originals Hombre Moda Superstar</p>
+                <p>$ 399.900</p>
+            </div>            
+            <div class="jum"><a href=""><img src="/img/11.jpg" alt=""></a><br>
+                <h4>SARA'SHOES</h4>
+                <p>Zapatos mujer santorini prince sintetico</p>
+                <p>$ 149.000</p>
+            </div>
+        </div>
+        <div class="metodospago">
+            <div class="met"><img src="/img/pago.png" alt=""></div>
+            <div class="met"><img src="/img/efecty.png" alt=""></div>
+            <div class="met"><img src="/img/bancolombia.png" alt=""></div>
+            <div class="met"><img src="/img/visa.png" alt=""></div>
+            <div class="met"><img src="/img/nequi.png" alt=""></div>
+        </div>
+        <footer  class="footer">
+            <nav>
+                <li><a href="*">Quienes Somos</a></li>
+                <li><a href="*">Contactanos</a></li>
+                <li><img class="icon" src="/img/WhatsApp.png" alt=""></li>
+                <li><img class="icon" src="/img/facebook.png" alt=""></li>
+                <li><img class="icon" src="/img/instagram.png" alt=""></li>
+                <li><img class="icon" src="/img/twitter.png" alt=""></li>
+            </nav>
+        </footer>
+      </div>
 </body>
 </html>
