--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/fonts/style.css">
-    <link rel="stylesheet" href="/icons/all.css">
+    <link rel="stylesheet" href="/css/basicos.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/menu.css">
 </head>
 <body>
     <div class="container">
@@ -34,7 +35,7 @@
                                 <li><a href="#">zapato deportivo</a></li>
                             </ul>
                     </li>
-                    <li><a href="*"><i class="fas fa-cogs"></i>Promociones</a></li>
+                    <li><a href="promociones.ejs"><i class="fas fa-cogs"></i>Promociones</a></li>
                     <li><a href="iniciar.ejs">Iniciar Sesión</a></li>
                     <li><a href="registrar.ejs">Registrarse</a></li>
                 </ul>
@@ -91,16 +92,39 @@
             <div class="met"><img src="/img/visa.png" alt=""></div>
             <div class="met"><img src="/img/nequi.png" alt=""></div>
         </div>
-        <footer  class="footer">
-            <nav>
-                <li><a href="*">Quienes Somos</a></li>
-                <li><a href="*">Contactanos</a></li>
-                <li><img class="icon" src="/img/WhatsApp.png" alt=""></li>
-                <li><img class="icon" src="/img/facebook.png" alt=""></li>
-                <li><img class="icon" src="/img/instagram.png" alt=""></li>
-                <li><img class="icon" src="/img/twitter.png" alt=""></li>
-            </nav>
-        </footer>
+<!--         <footer>
+            <div class="container-footer">
+                <div class="box-footer">
+                <div class="logo">
+                    <img src="/img/logo2.png" alt="">
+                </div>
+                <div class="terms">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid tempore quod impedit iusto fuga sequi dolorum. Magni dignissimos dolorum placeat quos soluta praesentium corporis esse facilis mollitia? Placeat, est dignissimos!</p>
+                </div>
+            </div>
+            <div class="box-footer">
+                <h2>Soluciones</h2>
+                <a href="#">App Desarrollo</a>
+                <a href="#">App Marketing</a>
+                <a href="#">IOS Desarrollo</a>
+                <a href="#">Android Desarrollo</a>
+            </div>
+            <div class="box-footer">
+                <h2>Compañia</h2>
+                <a href="#">Acerca de </a>
+                <a href="#">Trabajos</a>
+                <a href="#">Procesos</a>
+                <a href="#">Servicios</a>
+            </div>
+            <div class="box-footer">
+                <h2>Redes Sociales</h2>
+                <a href="#">App Desarrollo</a>
+                <a href="#">App Marketing</a>
+                <a href="#">IOS Desarrollo</a>
+                <a href="#">Android Desarrollo</a>
+            </div>
+            </div>
+        </footer> -->
       </div>
 </body>
 </html>
