--- a/views/tiendas.ejs
+++ b/views/tiendas.ejs
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/basicos.css">
+    <link rel="stylesheet" href="/css/tiendas.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
-    div class="menuvertical">
+    <div class="container">
             <nav>
                 <ul>
                     <img class="logo" src="/img/logo2.png" alt="logo">
@@ -30,19 +33,50 @@
                                 <li><a href="#">zapato deportivo</a></li>
                             </ul>
                     </li>
-                    <li><a href="*"><i class="fas fa-cogs"></i>Promociones</a></li>
+                    <li><a href="promociones.ejs"><i class="fas fa-cogs"></i>Promociones</a></li>
                 </ul>
             </nav>
         </div>
-        <footer  class="footer">
-            <nav>
-                <li><a href="*">Quienes Somos</a></li>
-                <li><a href="*">Contactanos</a></li>
-                <li><img class="icon" src="/img/WhatsApp.png" alt=""></li>
-                <li><img class="icon" src="/img/facebook.png" alt=""></li>
-                <li><img class="icon" src="/img/instagram.png" alt=""></li>
-                <li><img class="icon" src="/img/twitter.png" alt=""></li>
-            </nav>
-        </footer>
+        <div class="tiendas">
+           <div class="mini"><img src="/img/sandi.png" alt=""></div>
+           <div class="mini"><img src="/img/corona.png" alt=""></div>
+           <div class="mini"><img src="/img/sky.png" alt=""></div>
+           <div class="mini"><img src="/img/simon.png" alt=""></div>
+           <div class="mini"><img src="/img/sandi.png" alt=""></div>
+           <div class="mini"><img src="/img/sandi.png" alt=""></div>
+        </div>
+    </div>
+    <footer>
+        <div class="container-footer">
+            <div class="box-footer">
+            <div class="logo">
+                <img src="/img/logo2.png" alt="">
+            </div>
+            <div class="terms">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid tempore quod impedit iusto fuga sequi dolorum. Magni dignissimos dolorum placeat quos soluta praesentium corporis esse facilis mollitia? Placeat, est dignissimos!</p>
+            </div>
+        </div>
+        <div class="box-footer">
+            <h2>SOLUCIONES</h2>
+            <a href="#">App Desarrollo</a>
+            <a href="#">App Marketing</a>
+            <a href="#">IOS Desarrollo</a>
+            <a href="#">Android Desarrollo</a>
+        </div>
+        <div class="box-footer">
+            <h2>COMPAÑIA</h2>
+            <a href="#">Acerca de </a>
+            <a href="#">Trabajos</a>
+            <a href="#">Procesos</a>
+            <a href="#">Servicios</a>
+        </div>
+        <div class="box-footer">
+            <h2>Redes Sociales</h2>
+            <a href="#">Facebook</a>
+            <a href="#">WhatsApp</a>
+            <a href="#">Twitter</a>
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
