--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,11 +1,3 @@
-
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-}
 .container {  
     display: grid;
     grid-template-columns: 0px 1fr 0px;
@@ -17,8 +9,7 @@ body{
       ". imgprincipal ."
       ". ofertas ."
       ". nuevoproducto ."
-      ". metodospago ."
-      ". footer .";
+      ". metodospago .";
   }
   
   .menuvertical { 
@@ -53,15 +44,6 @@ body{
       width: 100%;
       height: 30%;
     }
-      .footer {
-           grid-area: footer;
-        border-top: 1px solid white;
-        margin-top: 40px;
-        padding-top: 40px;
-        display: inline;
-        color: rgb(0, 0, 0);
-    }
-  
  .menu-bar{
     display: none;
 }
