--- a/views/iniciar.ejs
+++ b/views/iniciar.ejs
@@ -22,11 +22,11 @@
                     </div>
                     <div class="form-group">
                         <label class="icon-user"></label>
-                        <input placeholder="usuario" type="text" name=""/>
+                        <input placeholder="usuario" type="text" name="" required/>
                     </div>
                     <div class="form-group">
                         <label class="icon-lock"></label>
-                        <input placeholder="contraseña" type="password" name="" />
+                        <input placeholder="contraseña" type="password" name=""  required/>
                     </div>
                     <p><a href="*">¡Olvidaste tu contraseña!</a></p>
                     <button type="button"><a href="index.ejs"> Iniciar Sesión</a></button>
